--- a/sass/design.scss
+++ b/sass/design.scss
@@ -3,3 +3,13 @@
 .header-nav-container{
     background: none !important;
 }
+
+#site-navigation{
+    ul{
+        li{
+            a{
+                color: #000 !important;
+            }
+        }
+    }
+}
