--- a/sass/design.scss
+++ b/sass/design.scss
@@ -13,6 +13,10 @@ header#masthead{
         .site-description{
             float: none;
             width: auto;
+            padding: 0;
+            color: #000;
+            background: none;
+            font-weight: normal;
         }
         .site-title{
             float: none;
