--- a/css/design.css
+++ b/css/design.css
@@ -2,6 +2,8 @@
 header#masthead {
   margin-bottom: 0; }
   header#masthead .inner.cf {
+    width: 100%;
+    box-sizing: border-box;
     padding-bottom: 0; }
     header#masthead .inner.cf .snav.cf {
       padding-top: 0; }
@@ -17,7 +19,11 @@ header#masthead {
       width: auto;
       padding: 0; }
   header#masthead #site-navigation .header-nav-container {
+    width: 100%;
+    box-sizing: border-box;
     background: none !important; }
+  header#masthead #site-navigation .nav-menu-open {
+    background-color: #fff !important; }
   header#masthead #site-navigation ul li a {
     color: #000 !important; }
 
@@ -26,3 +32,11 @@ header#masthead {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover; }
+
+#main {
+  width: 100%;
+  box-sizing: border-box; }
+
+.itemimg a img {
+  width: 100%;
+  height: auto; }
