--- a/sass/design.scss
+++ b/sass/design.scss
@@ -1,10 +1,11 @@
-@char-set: "utf-8";
+@char-set "utf-8";
+@import "parts.scss";
 
 body{
 }
 
 header#masthead{
-    margin-bottom: 0;
+    margin-bottom: 20px;
     .inner.cf{
         width: 100%;
         box-sizing: border-box;
@@ -67,4 +68,8 @@ header#masthead{
             height: auto;
         }
     }
+}
+
+#secondary{
+    float: none;
 }
