--- a/css/design.css
+++ b/css/design.css
@@ -10,7 +10,7 @@
 
 header#masthead {
   margin-bottom: 20px;
-  border-bottom: 0; }
+  border-bottom: none; }
   header#masthead .main-image {
     height: 350px;
     background-repeat: no-repeat;
@@ -33,7 +33,8 @@ header#masthead {
     header#masthead .inner.cf .site-title {
       float: none;
       width: auto;
-      padding: 0; }
+      padding: 0;
+      text-align: left; }
   header#masthead #mainMenu #site-navigation .header-nav-container {
     width: 100%;
     box-sizing: border-box;
@@ -44,8 +45,6 @@ header#masthead {
       padding: 0; }
       header#masthead #mainMenu #site-navigation .nav-menu-open ul li a {
         display: block;
-        line-height: 25px;
-        padding: 0 3%;
         color: #000 !important; }
 
 #main {
@@ -59,4 +58,9 @@ header#masthead {
   height: auto; }
 
 #secondary {
-  float: none; }
+  float: none;
+  border-top: none; }
+
+h1.item_page_title {
+  margin-bottom: 30px;
+  font-size: 33px; }
