メインメニュー内に　カートボタン、検索枠　入れた

--- a/css/design.css
+++ b/css/design.css
@@ -36,7 +36,7 @@ header#masthead {
       padding: 0;
       text-align: left; }
   header#masthead #mainMenu {
-    background-color: #000; }
+    background-color: #fff; }
     header#masthead #mainMenu #site-navigation .header-nav-container {
       width: 100%;
       box-sizing: border-box;
