--- a/sass/design.scss
+++ b/sass/design.scss
@@ -41,7 +41,7 @@ header#masthead{
     }
     
     #mainMenu{
-        background-color: #000;
+        background-color: #fff;
         #site-navigation{
             .header-nav-container{
                 width: 100%;
